# quantum-kill-switch

./: LICENSE  README.md  quantum_kill_switch.py
qkd_tandem/: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  trielliptic_packet.py
qkd_tandem/actors/: alice.py  bob.py  eve.py
qkd_tandem/analytics/: metrics.py  plots.py
qkd_tandem/benchmarks/: honest_packet.json  tampered_packet.json
qkd_tandem/channels/: bb84.py  kill_switch.py
qkd_tandem/cli/: run.py  simulation.py
qkd_tandem/experiments/: config.py
qkd_tandem/sabotage/: basic.py  star_qft.py
qkd_tandem/tests/: test_bb84.py  test_trielliptic_digest.py  test_trielliptic_packet.py
