[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qkd_tandem"
version = "0.1.0"
description = "Quantum Key Distribution tandem simulation with sabotage kill switch"
authors = [{ name="Sirlupinwatson" }]
dependencies = ["qiskit", "qiskit-aer", "matplotlib", "numpy"]

[project.scripts]
qkd-run = "qkd_tandem.cli.run:main"

[tool.setuptools.packages.find]
include = ["qkd_tandem*"]

